--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
        
 
         <div class="ham-nav">
-          <i class="fa-solid fa-bars"></i>
+          <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+          
           <ul id="menu" class="menu">
             <li>Home</li>
             <li>New</li>
@@ -139,5 +140,7 @@
         </section>
       </article>
     </main>
+
+    <script src="assets/scripts/script.js"></script>
   </body>
 </html>
